Actions
Bug #11301
closedcpio: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with NULL pointer:
cpio.c: In function 'ckopts': cpio.c:1298:15: error: comparison between pointer and integer [-Werror] while (*t_p != NULL) { ^~ cpio.c: In function 'creat_spec': cpio.c:1895:35: error: comparison between pointer and integer [-Werror] if (curdir != NULL && curdir[1] == NULL) { ^~ cpio.c: In function 'gethdr': cpio.c:4676:16: error: comparison between pointer and integer [-Werror] if (*preptr != NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4c719f3bd8ab1791d6763012560603c65390008c
commit 4c719f3bd8ab1791d6763012560603c65390008c Author: Toomas Soome <tsoome@me.com> Date: 2019-07-07T18:44:27.000Z 11301 cpio: NULL pointer errors Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions