11301 cpio: NULL pointer errors Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>